MR2-1433 - Companion login list scrollbar fixes, should fix MR2-1357 as well r=mconley
Differential Revision: https://phabricator.services.mozilla.com/D133703

--- a/browser/components/companion/content/companion.css
+++ b/browser/components/companion/content/companion.css
@@ -556,6 +556,7 @@ toolbarbutton.subviewbutton-back {
 .passwords-panel {
   height: 100%;
   width: 100%;
+  overflow-y: hidden;
 }
 
 #scroll {
